kube/api_gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  labels:
    name: api-gateway
spec:
  rules:
  - host: ticketforge.api.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway
            port: 
              number: 80
